system-external-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: external-app
spec:
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-app
subnets:
  - addresses:
      - ip: <External IP of user-app-ilb service>
    ports:
      - port: 80
